Fixed: 'single' demo layout
Fixed toolbar overlap issue (had to 'clearfix' the toolbar). Also fixed fullscreen tools when embedded in Bootstrap.

Refs #194

--- a/css/main.css
+++ b/css/main.css
@@ -159,5 +159,18 @@ section#footer p, section#footer nav {
 
 /* try it */
 #diva-wrapper {
-    margin-bottom: 3em;
+    margin-bottom: 1em;
+}
+.diva-goto-form {
+    float: right;
+}
+.diva-page-label {
+    float: right;
+    padding-right: 4px !important;
+}
+.diva-buttons-label {
+    padding: 5px 10px !important;
+}
+.diva-input {
+    width: 38px;
 }
